[package]
name = "rusty-blink"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
nb = "1.1.0"
cortex-m = "0.7.7"  # Access to the generic ARM peripherals
cortex-m-rt = "0.7.5"  # Startup code for the ARM Core
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0" # Access to generic embedded functions (`set_high`)
panic-halt = "1.0.0" # Halt on panic
st7735-lcd = "0.10.0"

# Access to the stm32f103 HAL.
[dependencies.stm32f1xx-hal]
version = "0.11.0"
features = ["stm32f103", "medium"]
