[package]
name = "sg90"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
debug = 2

[dependencies]
# Change stm32f103c8 to your chip name, if necessary.
defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.1", default-features = false }
nb = "1.1.0"
static_cell = "2.0.0"
embassy-stm32 = { version = "0.4.0", features = [ "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any" ] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-rp = { version = "0.8.0", features = ["defmt"] }
rp-pac = { version = "7.0.0", features = ["rp235x"] }

[package.metadata.embassy]
build = [
  { target = "thumbv7m-none-eabi", artifact-dir = "out/examples/stm32f1" }
]
